chore: update project informations

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "wxt-react-starter",
-  "description": "manifest.json description",
+  "name": "flashnotes",
+  "description": "Browser extension for quick and simple note-taking.",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1",
   "type": "module",
   "scripts": {
     "dev": "wxt",
